After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682297 - ostree-run-triggers: fix typo in filename comparison function
ostree-run-triggers: fix typo in filename comparison function
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-08-20 20:32 UTC by Giovanni Campagna
Modified: 2012-08-20 21:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ostree-run-triggers: fix typo in filename comparison function (952 bytes, patch)
2012-08-20 20:32 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-08-20 20:32:01 UTC
The comparison function was comparing the first file to itself,
and this resulted in triggers being run in random order.
Comment 1 Giovanni Campagna 2012-08-20 20:32:04 UTC
Created attachment 221896 [details] [review]
ostree-run-triggers: fix typo in filename comparison function
Comment 2 Colin Walters 2012-08-20 20:51:04 UTC
Review of attachment 221896 [details] [review]:

Hah.  Nice.
Comment 3 Giovanni Campagna 2012-08-20 21:02:50 UTC
Attachment 221896 [details] pushed as 1d93a74 - ostree-run-triggers: fix typo in filename comparison function